Switched to using a cointainer and grid system

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,10 +11,12 @@ body {
     height:20%;
 }
 
-.maingallery {
-    text-indent:10%;
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    padding: 10px;
 }
 
-.maingalleryimg {
-    text-indent:10%;
+.grid-item {
+    padding: 20px;
 }
