Added Experimental button to rings.html

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,9 +6,26 @@ body {
     text-align: center;
 }
 
-.logoimg {
+.logo img {
     width:60%;
     height:20%;
+}
+
+.logo .contactBtn {
+    position:relative;
+    top:50px;
+    right:50px;
+    transform: translate(10%,10%);
+    background-color:#f3cbf7;
+    color:black;
+    font-size:80px;
+    padding: 12px 24px;
+    border:none;
+    cursor:pointer;
+}
+
+.logo .contactBtn:hover {
+    background-color:#cda5d1;
 }
 
 .grid-container {
