--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,8 +13,8 @@ body {
 
 .logo .contactBtn {
     position:absolute;
-    top:100px;
-    right:50px;
+    top:50%;
+    right:50%;
     transform: translate(-10%,-10%);
     background-color:#f3cbf7;
     color:black;
