--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,11 +4,23 @@ body {
 
 .logo {
     text-align: center;
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
-.logo img {
+.logo_img {
+    position: relative;
+    top: 0;
+    left: 0;
     width:60%;
     height:20%;
+}
+
+.contact_button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 .grid-container {
