--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,8 +19,10 @@ body {
 
 .contact_button {
     position: absolute;
-    top: 10px;
+    top: 1000px;
     left: 10px;
+    height: 25%;
+    width: auto;
 }
 
 .grid-container {
