Added Comments and messed around a bit

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+    /* Container Styling */
 body {
     background-color: white;
 }
@@ -9,6 +10,8 @@ body {
     left: 0;
 }
 
+
+    /* Object Styling */
 .logo_img {
     position: relative;
     top: 0;
@@ -25,20 +28,20 @@ body {
     width: auto;
 }
 
+    
+    /* Grid Styling */
 .grid-container {
+    position: relative;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     padding: 10px;
+    width: 100%;
 }
 
 .grid-item {
     padding: 20px;
-
-}
-
-.grid-item img {
-    width: 10%;
-    height: auto;
+    width: auto;
+    height: 100%;
     object-fit: cover;
     overflow: hidden;
 }
