--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,17 +31,18 @@ body {
     
     /* Grid Styling */
 .grid-container {
-    position: relative;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     padding: 10px;
-    width: 100%;
 }
-
+    
 .grid-item {
-    padding: 20px;
-    width: auto;
-    height: 100%;
+    padding: 20px;    
+}
+    
+.grid-item img {
+    width: 10%;
+    height: auto;
     object-fit: cover;
     overflow: hidden;
 }
