--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,13 @@ body {
     left: 0;
 }
 
+.main-content {
+    position: absolute;
+    height: 100%;
+    width: 60%;
+    background-color: blue;
+}
+
 
     /* Object Styling */
 .logo_img {
@@ -32,6 +39,7 @@ body {
     text-align: center;
     margin-bottom: 10%;
 }
+
     
     /* Grid Styling */
 .grid-container {
