--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,8 +12,8 @@ body {
 
 .main-content {
     position: absolute;
+    width: 100%;
     height: 100%;
-    width: 60%;
     background-color: blue;
 }
 
@@ -38,6 +38,12 @@ body {
 .footer_video {
     text-align: center;
     margin-bottom: 10%;
+}
+
+.portrait-photo {
+    max-width: 46%;
+    max-height: 92%;
+    margin: 2%;
 }
 
     
