--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,13 +10,6 @@ body {
     left: 0;
 }
 
-.main-content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: blue;
-}
-
 
     /* Object Styling */
 .logo_img {
@@ -38,12 +31,6 @@ body {
 .footer_video {
     text-align: center;
     margin-bottom: 10%;
-}
-
-.contact-photo {
-    max-width: 46%;
-    max-height: 92%;
-    margin: 2%;
 }
 
     
@@ -70,13 +57,20 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: blue;
 }
 
 .contact-photo {
     flex-basis: 40%;
+    max-width: 46%;
+    max-height: 92%;
+    margin: 2%;
+    background-color: red;
 }
 
 .contact-text {
-    font-size: 2%;
-    padding-left: 2%;
+    max-width: 46%;
+    font-size: 1vw;
+    padding: 2%;
+    background-color: yellow;
 }
